[tool.poetry]
name = "cryptoy"
version = "0.1.0"
description = ""
authors = ["steve christensen <adventuresmith.rpg@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
cryptoy = "cryptoy.console:main"

[tool.poetry.dependencies]
python = "^3.8"
PyNaCl = "^1.4.0"
click = "^7.1.2"
rich = "^9.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.790"
black = "^20.8b1"
pylint = "^2.6.0"
bandit = "^1.6.3"
pytest = "^6.1.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
