[tool.poetry]
name = "cryptoy"
version = "0.1.0"
description = ""
authors = ["steve christensen <adventuresmith.rpg@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
cryptoy = "cryptoy.console:cli"

[tool.poetry.dependencies]
python = "^3.8"
PyNaCl = "^1.4.0"
click = "^7.1.2"
rich = "^9.3.0"
dataclasses-json = "^0.5.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.790"
black = "^20.8b1"
pylint = "^2.6.0"
bandit = "^1.6.3"
pytest = "^6.1.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
flake8-bandit = "^2.1.2"
dlint = "^0.11.0"
pyflakes = "^2.2.0"
pycodestyle = "^2.6.0"
pep8-naming = "^0.11.1"
flake8-docstrings = "^1.5.0"
pydocstyle = "^5.1.1"
flake8-rst-docstrings = "^0.0.14"
flake8-bugbear = "^20.11.1"
mccabe = "^0.6.1"
darglint = "^1.5.8"
autopep8 = "^1.5.4"
flake8-black = "^0.2.1"
flake8-mutable = "^1.2.0"
flake8-functions = "^0.0.4"
flake8-use-fstring = "^1.1"
flake8-simplify = "^0.11.0"
flake8-expression-complexity = "^0.0.8"
flake8-pytest = "^1.3"
flake8-import-order = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["cryptoy"]

[tool.coverage.report]
show_missing = true
#fail_under = 80